tests/expectations/parser/unreachable/math_op_fail.out
namespace = "ParseStatement"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a ; b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a import b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a , b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a [ b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a ] b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a { b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a } b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a ( b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a ) b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a : b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a ? b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a _ b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a = b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a ! b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a .. b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a console b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a const b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a let b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a for b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a if b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a else b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a i8 b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a i16 b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a i32 b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a i64 b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a i128 b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a u8 b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a u16 b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a u32 b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a u64 b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a u128 b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a & b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a return b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a self b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a Self b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a true b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a false b;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a 0 b;
     |       ^""",
    """
did not consume all input: '=' @ 1:3-4
'b' @ 1:4-5
';' @ 1:5-6
""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '='
    --> test:1:3
     |
   1 | x.=b;
     |   ^""",
    """
Error [EPAR0370005]: expected ; -- found ','
    --> test:1:2
     |
   1 | x,=b; // 43
     |  ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '='
    --> test:1:3
     |
   1 | x[=b;
     |   ^""",
    """
Error [EPAR0370005]: expected ; -- found ']'
    --> test:1:2
     |
   1 | x]=b;
     |  ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '='
    --> test:1:3
     |
   1 | x{=b;
     |   ^""",
    """
Error [EPAR0370005]: expected ; -- found '}'
    --> test:1:2
     |
   1 | x}=b;
     |  ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test:1:4
     |
   1 | x=(;
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found ')'
    --> test:1:3
     |
   1 | x=);
     |   ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found ':'
    --> test:1:3
     |
   1 | x=:;
     |   ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '::'
    --> test:1:3
     |
   1 | x=::;
     |   ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '='
    --> test:1:3
     |
   1 | x?=b;
     |   ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '='
    --> test:1:4
     |
   1 | x!==b;
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '='
    --> test:1:4
     |
   1 | x>==b;
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '='
    --> test:1:4
     |
   1 | x<==b;
     |    ^""",
    """
Error [EPAR0370005]: expected ; -- found '..'
    --> test:1:2
     |
   1 | x..=b;
     |  ^^""",
]
